--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
   - deploy
 
 default:
-  image: mcr.microsoft.com/azure-cli
+  image: inf-docker.fh-rosenheim.de/inf-ca/sose2024/iecag/azure-cli
   before_script:
     - az login --service-principal --username $SP_ID --password $SP_SECRET --tenant $SP_TENANT_ID
     - az account set --subscription $SUBSCRIPTION_ID
