Try to allow more exit codes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,9 @@ default:
 
 azure_create_resource_group:
   stage: azure_setup
-  allow_failure: true
+  allow_failure:
+    exit_codes:
+      - 0
+      - 1
   script:
     - az group create -n $RESOURCE_GROUP -l westeurope
