--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ terraform:
   before_script: 
     - apk update && apk add ca-certificates
     - mkdir -p /etc/ssl/certs
-    - cp $CI_PROJECT_DIR/terraform/.thro.crt $CUSTOM_CA_BUNDLE
+    - cp $CI_PROJECT_DIR/terraform/.thro.crt /etc/ssl/certs/custom-ca-bundle.crt
     - update-ca-certificates
   script:
     - cd terraform 
