feat: added on homepage request to get all cryptocurrency current prices for loadup.

--- a/code/WebApp/WebApp/appsettings.json
+++ b/code/WebApp/WebApp/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureTableStorage": {
+    "AccountName": "your-storage-account-name",
+    "AccountKey": "your-storage-account-key",
+    "TableEndpoint": "https://your-storage-account-name.table.core.windows.net"
+  }
 }
