feat: getting data from the data table works.

--- a/code/WebApp/WebApp/appsettings.json
+++ b/code/WebApp/WebApp/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "AzureTableStorage": {
-    "AccountName": "your-storage-account-name",
+    "AccountName": "iecagstorage",
     "AccountKey": "your-storage-account-key",
-    "TableEndpoint": "https://your-storage-account-name.table.core.windows.net"
+    "TableEndpoint": "https://iecagstorage.table.core.windows.net"
   }
 }
