--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,8 @@ azure_create_datatable:
     - azure_create_resource_group
   script:
     - az storage account create -n $STORAGE_ACCOUNT -g $RESOURCE_GROUP -l westus --subscription $SUBSCRIPTION_ID || exit 0
+    - AZURE_STORAGE_ACCOUNT_KEY=$(az storage account keys list --account-name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP | jq -r .[0].value) || exit 0
+    - echo ${#AZURE_STORAGE_ACCOUNT_KEY}
     - az storage table create --name $TABLE_CURRENT_PRICE --account-name $STORAGE_ACCOUNT || exit 0
     - az storage table create --name $TABLE_PRICE_HISTORY --account-name $STORAGE_ACCOUNT || exit 0
   rules:
