struc: restructured whole codebase feat: user password will be hashed and then stored in the database feat: login and registration works with Azure Data Tables feat: added UserService, which manages all the interactions with the database regarding users. feat: now we just need the ConnectionString instead of all the informations like key, name, TableEndpoint

--- a/code/WebApp/WebApp/appsettings.json
+++ b/code/WebApp/WebApp/appsettings.json
@@ -6,9 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AzureTableStorage": {
-    "AccountName": "iecagstorage",
-    "AccountKey": "your-storage-account-key",
-    "TableEndpoint": "https://iecagstorage.table.core.windows.net"
+  "ConnectionStrings": {
+    "AzureStorage": ""
   }
 }
