--- a/code/WebApp/WebApp/WebApp.csproj
+++ b/code/WebApp/WebApp/WebApp.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Components\DoughnutChart.razor" />
+  </ItemGroup>
+
 </Project>
