--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,12 @@ variables:
   TABLE_PRICE_HISTORY:
     description: "price history table name"
     value: "pricehistory"
+  WEBAPP_NAME:
+    description: "web app name"
+    value: "iecagweb"
+  WEBAPP_PATH:
+    description: "web app path"
+    value: "/path/to/app.zip"
 
 stages:
   - azure_setup
@@ -101,3 +107,22 @@ azure_create_datatable:
   rules:
     - if: '$DEPLOY == "true"'
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+
+azure_create_webapp:
+  stage: azure_setup
+  allow_failure: true
+  needs:
+    - azure_create_datatable
+  script:
+    - STORAGE_CONNECTION_STRING=$(az storage account show-connection-string --name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP --query connectionString -o tsv)
+    - az webapp create --resource-group $RESOURCE_GROUP --plan AppServicePlan --name $WEBAPP_NAME --runtime "DOTNET|6.0" || exit 0
+    - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --settings AzureTable=$STORAGE_CONNECTION_STRING || exit 0
+  
+azure_deploy_webapp:
+  stage: azure_setup
+  allow_failure: true
+  needs:
+    - azure_create_webapp
+  script:
+    - az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --src $WEBAPP_PATH
+  when: manual
