--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 variables:
   RESOURCE_GROUP:
-    description: "the resource goup name"
+    description: "the resource group name"
     value: "IeCAG-INFCA"
   DEPLOY:
     description: "Deploying the infrastructure"
@@ -20,6 +20,15 @@ variables:
   TABLE_PRICE_HISTORY:
     description: "price history table name"
     value: "pricehistory"
+  TABLE_PRICE_HISTORY_7DAYS:
+    description: "price history table last 7 Days"
+    value: "pricehistory7days"
+  TABLE_PRICE_HISTORY_30DAYS:
+    description: "price history table last 30 Days"
+    value: "pricehistory30days"
+  TABLE_PRICE_HISTORY_180DAYS:
+    description: "price history table last 180 Days"
+    value: "pricehistory180days"
   APPSERVICE_PLAN_NAME:
     description: "app service plan name"
     value: "iecagAppServicePlan"
@@ -120,6 +129,9 @@ azure_create_datatable:
     - echo ${#AZURE_STORAGE_ACCOUNT_KEY}
     - az storage table create --name $TABLE_CURRENT_PRICE --account-name $STORAGE_ACCOUNT || exit 0
     - az storage table create --name $TABLE_PRICE_HISTORY --account-name $STORAGE_ACCOUNT || exit 0
+    - az storage table create --name $TABLE_PRICE_HISTORY_7DAYS --account-name $STORAGE_ACCOUNT || exit 0
+    - az storage table create --name $TABLE_PRICE_HISTORY_30DAYS --account-name $STORAGE_ACCOUNT || exit 0
+    - az storage table create --name $TABLE_PRICE_HISTORY_180DAYS --account-name $STORAGE_ACCOUNT || exit 0
   rules:
     - if: '$DEPLOY == "true"'
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
