--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,6 +132,7 @@ azure_create_datatable:
     - az storage table create --name $TABLE_PRICE_HISTORY_30DAYS --account-name $STORAGE_ACCOUNT || exit 0
     - az storage table create --name $TABLE_PRICE_HISTORY_180DAYS --account-name $STORAGE_ACCOUNT || exit 0
     - az storage table create --name $TABLE_LOGS --account-name $STORAGE_ACCOUNT || exit 0
+    - az storage table create --name $TABLE_USERS --account-name $STORAGE_ACCOUNT || exit 0
   rules:
     - if: '$DEPLOY == "true"'
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
