--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,9 @@ variables:
   TABLE_USERS:
     description: "users table"
     value: "users"
+  TABLE_TRANSACTIONS:
+    description: "transactions table"
+    value: "transactions"
   APPSERVICE_PLAN_NAME:
     description: "app service plan name"
     value: "iecagAppServicePlan"
@@ -133,6 +136,7 @@ azure_create_datatable:
     - az storage table create --name $TABLE_PRICE_HISTORY_180DAYS --account-name $STORAGE_ACCOUNT || exit 0
     - az storage table create --name $TABLE_LOGS --account-name $STORAGE_ACCOUNT || exit 0
     - az storage table create --name $TABLE_USERS --account-name $STORAGE_ACCOUNT || exit 0
+    - az storage table create --name $TABLE_TRANSACTIONS --account-name $STORAGE_ACCOUNT || exit 0
   rules:
     - if: '$DEPLOY == "true"'
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
