--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -162,10 +162,18 @@ azure_create_webapp:
   needs:
     - azure_create_appserviceplan
   script:
+    - echo "Creating webapp"
     - STORAGE_CONNECTION_STRING=$(az storage account show-connection-string --name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP --query connectionString -o tsv)
     - az webapp create --resource-group $RESOURCE_GROUP --plan $APPSERVICE_PLAN_NAME --name $WEBAPP_NAME --runtime "dotnet:8" || exit 0
     - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --settings ConnectionStrings__AzureStorage=$STORAGE_CONNECTION_STRING || exit 0
     - az webapp config set --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --web-sockets-enabled true || exit 0
+    - echo "Creating wrapper"
+    - AZURE_ACCESS_KEY=$(az storage account show-connection-string --name $STORAGE_ACCOUNT_NAME --resource-group $RESOURCE_GROUP --query connectionString --output tsv)
+    - az webapp create --resource-group $RESOURCE_GROUP --plan $APPSERVICE_PLAN_NAME --name $WRAPPER_CONTAINER_NAME --runtime "PYTHON:3.8" || exit 0
+    - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --settings AZURE_ACCESS_KEY=$AZURE_ACCESS_KEY || exit 0
+    - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --settings COINGECKO_TOKEN=$COINGECKO_TOKEN || exit 0
+    - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --settings AZURE_ACCOUNT_NAME=$STORAGE_ACCOUNT || exit 0
+
 
 azure_build_webapp:
   stage: azure_setup
@@ -187,13 +195,35 @@ azure_build_webapp:
     paths:
       - code/WebApp/out/app.zip
 
+azure_build_wrapper:
+  stage: azure_setup
+  image: python:3
+  needs:
+    - azure_create_webapp
+  before_script:
+    - echo "Building wrapper"
+  script:
+    - apt update && apt install -y zip
+    - cd $WRAPPER_DIR
+    - python -m venv venv
+    - . venv/bin/activate && pip install requirements.txt
+    - zip -r app.zip .
+  artifacts:
+    when: on_success
+    access: all
+    expire_in: 30 days
+    paths:
+      - code/api_wrapper/app.zip
+
 azure_deploy_webapp:
   stage: azure_setup
   allow_failure: true
   needs:
     - azure_build_webapp
+    - azure_build_wrapper
   script:
     - az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --src code/WebApp/out/app.zip || exit 0
+    - az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --src code/api_wrapper/app.zip || exit 0
 
 #build_api_wrapper:
 #  stage: azure_setup
@@ -207,24 +237,24 @@ azure_deploy_webapp:
 #    - docker build -t "$CI_REGISTRY_IMAGE/api_wrapper" .
 #    - docker push "$CI_REGISTRY_IMAGE/api_wrapper"
 
-azure_deploy_wrapper:
-  stage: azure_setup
-  allow_failure: true
-  needs:
-    - azure_create_datatable
-    #- build_api_wrapper
-  script:
-    - az acr create --resource-group $RESOURCE_GROUP --name $CONTAINER_REGISTRY_NAME --sku Basic --admin-enabled true || exit 0
-    - ACR_LOGIN_SERVER=$(az acr show --name $CONTAINER_REGISTRY_NAME --resource-group $RESOURCE_GROUP --query loginServer --output tsv)
-    - ACR_USERNAME=$(az acr credential show --name $CONTAINER_REGISTRY_NAME --query "username" --output tsv)
-    - ACR_PASSWORD=$(az acr credential show --name $CONTAINER_REGISTRY_NAME --query "passwords[0].value" --output tsv)
-    - cd $WRAPPER_DIR
-    - az acr build --image api_wrapper:latest --registry $ACR_LOGIN_SERVER --file Dockerfile .
+# azure_deploy_wrapper:
+#   stage: azure_setup
+#   allow_failure: true
+#   needs:
+#     - azure_create_datatable
+#     #- build_api_wrapper
+#   script:
+#     - az acr create --resource-group $RESOURCE_GROUP --name $CONTAINER_REGISTRY_NAME --sku Basic --admin-enabled true || exit 0
+#     - ACR_LOGIN_SERVER=$(az acr show --name $CONTAINER_REGISTRY_NAME --resource-group $RESOURCE_GROUP --query loginServer --output tsv)
+#     - ACR_USERNAME=$(az acr credential show --name $CONTAINER_REGISTRY_NAME --query "username" --output tsv)
+#     - ACR_PASSWORD=$(az acr credential show --name $CONTAINER_REGISTRY_NAME --query "passwords[0].value" --output tsv)
+#     - cd $WRAPPER_DIR
+#     - az acr build --image api_wrapper:latest --registry $ACR_LOGIN_SERVER --file Dockerfile .
 
-    #- az containerapp env create --name $CONTAINER_ENV --resource-group $RESOURCE_GROUP --location $AZURE_LOCATION || exit 0
-    - AZURE_ACCESS_KEY="$(az storage account keys list --account-name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP | jq -r .[0].value)"
-    #- AZURE_ACCESS_KEY=$(az storage account show-connection-string --name $STORAGE_ACCOUNT_NAME --resource-group $RESOURCE_GROUP --query connectionString --output tsv)
-    - echo ${#AZURE_ACCESS_KEY}
-    #- az containerapp up -n $WRAPPER_CONTAINER_NAME --image $CI_REGISTRY_IMAGE/api_wrapper:latest --ingress external --target-port 8080 --environment $CONTAINER_ENV --registry-server "$CI_REGISTRY" --registry-password "$CI_REGISTRY_PASSWORD" --registry-username "$CI_REGISTRY_USER" --env-vars COINGECKO_TOKEN=$COINGECKO_TOKEN AZURE_ACCOUNT_NAME=$STORAGE_ACCOUNT AZURE_ACCESS_KEY=$AZURE_ACCESS_KEY || exit 0
-    - az container create --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --image $CONTAINER_REGISTRY_NAME.azurecr.io/api_wrapper:latest --cpu 1 --memory 1 --registry-login-server $CONTAINER_REGISTRY_NAME.azurecr.io --registry-username $ACR_USERNAME --registry-password$ACR_PASSWORD --dns-name-label $WRAPPER_CONTAINER_NAMEdns --ingress external --target-port 8080
+#     #- az containerapp env create --name $CONTAINER_ENV --resource-group $RESOURCE_GROUP --location $AZURE_LOCATION || exit 0
+#     - AZURE_ACCESS_KEY="$(az storage account keys list --account-name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP | jq -r .[0].value)"
+#     #- AZURE_ACCESS_KEY=$(az storage account show-connection-string --name $STORAGE_ACCOUNT_NAME --resource-group $RESOURCE_GROUP --query connectionString --output tsv)
+#     - echo ${#AZURE_ACCESS_KEY}
+#     #- az containerapp up -n $WRAPPER_CONTAINER_NAME --image $CI_REGISTRY_IMAGE/api_wrapper:latest --ingress external --target-port 8080 --environment $CONTAINER_ENV --registry-server "$CI_REGISTRY" --registry-password "$CI_REGISTRY_PASSWORD" --registry-username "$CI_REGISTRY_USER" --env-vars COINGECKO_TOKEN=$COINGECKO_TOKEN AZURE_ACCOUNT_NAME=$STORAGE_ACCOUNT AZURE_ACCESS_KEY=$AZURE_ACCESS_KEY || exit 0
+#     - az container create --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --image $CONTAINER_REGISTRY_NAME.azurecr.io/api_wrapper:latest --cpu 1 --memory 1 --registry-login-server $CONTAINER_REGISTRY_NAME.azurecr.io --registry-username $ACR_USERNAME --registry-password$ACR_PASSWORD --dns-name-label $WRAPPER_CONTAINER_NAMEdns --ingress external --target-port 8080
 
