--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -202,7 +202,7 @@ azure_build_wrapper:
     - apt update && apt install -y zip
     - cd $WRAPPER_DIR
     - python -m venv venv
-    - . venv/bin/activate && pip install requirements.txt
+    - . venv/bin/activate && pip install -r requirements.txt
     - zip -r app.zip .
   artifacts:
     when: on_success
