--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -195,6 +195,8 @@ azure_deploy_webapp:
   allow_failure: true
   needs:
     - azure_create_resource_group_datatable_appserviceplan_webapp
+    - azure_build_webapp
+    - azure_build_wrapper
   script:
     - az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --src code/WebApp/out/app.zip || exit 0
     - az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --src code/api_wrapper/app.zip || exit 0
