--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,9 @@ variables:
   APPSERVICE_PLAN_NAME:
     description: "app service plan name"
     value: "iecagAppServicePlan"
+  APPSERVICE_WRAPPER_PLAN_NAME:
+    description: "app service plan name"
+    value: "iecagwrapperAppServicePlan"
   WEBAPP_NAME:
     description: "web app name"
     value: "iecagweb"
@@ -139,6 +142,7 @@ azure_create_resource_group_datatable_appserviceplan_webapp:
     - az storage table create --name $TABLE_NOTIFICATIONS --account-name $STORAGE_ACCOUNT || exit 0
     - echo "Creating appserviceplan"
     - az appservice plan create --name $APPSERVICE_PLAN_NAME --resource-group $RESOURCE_GROUP --sku F1 || exit 0
+    - az appservice plan create --name $APPSERVICE_WRAPPER_PLAN_NAME --is-linux --resource-group $RESOURCE_GROUP --sku F1 || exit 0
     - echo "Creating webapp"
     - STORAGE_CONNECTION_STRING=$(az storage account show-connection-string --name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP --query connectionString -o tsv)
     - az webapp create --resource-group $RESOURCE_GROUP --plan $APPSERVICE_PLAN_NAME --name $WEBAPP_NAME --runtime "dotnet:8" || exit 0
@@ -146,7 +150,7 @@ azure_create_resource_group_datatable_appserviceplan_webapp:
     - az webapp config set --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --web-sockets-enabled true || exit 0
     - echo "Creating wrapper"
     - AZURE_ACCESS_KEY=$(az storage account show-connection-string --name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP --query connectionString --output tsv)
-    - az webapp create --resource-group $RESOURCE_GROUP --plan $APPSERVICE_PLAN_NAME --name $WRAPPER_CONTAINER_NAME --runtime "PYTHON:3.8" || exit 0
+    - az webapp create --resource-group $RESOURCE_GROUP --plan $APPSERVICE_WRAPPER_PLAN_NAME --name $WRAPPER_CONTAINER_NAME --runtime "PYTHON:3.8" || exit 0
     - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --settings AZURE_ACCESS_KEY=$AZURE_ACCESS_KEY || exit 0
     - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --settings COINGECKO_TOKEN=$COINGECKO_TOKEN || exit 0
     - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --settings AZURE_ACCOUNT_NAME=$STORAGE_ACCOUNT || exit 0
