--- a/code/WebApp/WebApp/appsettings.json
+++ b/code/WebApp/WebApp/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzureStorage": ""
+    "AzureStorage": "",
+    "ApplicationInsights": ""
   }
 }
