--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,9 @@ variables:
   CONTAINER_REGISTRY_NAME:
     description: "container registry"
     value: "iecagconreg"
+  APPLICATION_INSIGHTS_NAME:
+    description: "application insights name"
+    value: "iecagAppServiceApplicationInsights"
 
 
 stages:
@@ -140,6 +143,9 @@ azure_create_resource_group_datatable_appserviceplan_webapp:
     - az storage table create --name $TABLE_USERS --account-name $STORAGE_ACCOUNT || exit 0
     - az storage table create --name $TABLE_TRANSACTIONS --account-name $STORAGE_ACCOUNT || exit 0
     - az storage table create --name $TABLE_NOTIFICATIONS --account-name $STORAGE_ACCOUNT || exit 0
+    - echo "Creating Application Insight for webapp"
+    - az monitor app-insights component create --app $APPLICATION_INSIGHTS_NAME --resource-group $RESOURCE_GROUP
+    - APP_INSIGHTS_CONNECTION_STRING=$(az monitor app-insights component show --app $APPLICATION_INSIGHTS_NAME --resource-group $RESOURCE_GROUP --query connectionString -o tsv)
     - echo "Creating appserviceplan"
     - az appservice plan create --name $APPSERVICE_PLAN_NAME --resource-group $RESOURCE_GROUP --sku F1 || exit 0
     - az appservice plan create --name $APPSERVICE_WRAPPER_PLAN_NAME --is-linux --resource-group $RESOURCE_GROUP --sku F1 || exit 0
@@ -147,6 +153,7 @@ azure_create_resource_group_datatable_appserviceplan_webapp:
     - STORAGE_CONNECTION_STRING=$(az storage account show-connection-string --name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP --query connectionString -o tsv)
     - az webapp create --resource-group $RESOURCE_GROUP --plan $APPSERVICE_PLAN_NAME --name $WEBAPP_NAME --runtime "dotnet:8" || exit 0
     - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --settings ConnectionStrings__AzureStorage=$STORAGE_CONNECTION_STRING || exit 0
+    - az webapp config appsettings set --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --settings ConnectionStrings__ApplicationInsights=$APP_INSIGHTS_CONNECTION_STRING || exit 0
     - az webapp config set --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --web-sockets-enabled true || exit 0
     - echo "Creating wrapper"
     - AZURE_ACCESS_KEY=$(az storage account show-connection-string --name $STORAGE_ACCOUNT --resource-group $RESOURCE_GROUP --query connectionString --output tsv)
