--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,9 @@ variables:
   APPLICATION_INSIGHTS_NAME:
     description: "application insights name"
     value: "iecagAppServiceApplicationInsights"
+  SENDGRID_API_KEY:
+    description: "sendgrid api key"
+    value: ""
 
 
 stages:
@@ -214,6 +217,14 @@ azure_deploy_webapp:
   script:
     - az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WEBAPP_NAME --src code/WebApp/out/app.zip || exit 0
     - az webapp deployment source config-zip --resource-group $RESOURCE_GROUP --name $WRAPPER_CONTAINER_NAME --src code/api_wrapper/app.zip || exit 0
+
+azure_notifications:
+  stage: azure_setup
+  allow_failure: true
+  needs:
+    - azure_deploy_webapp
+  script:
+    - echo "Setup notifications"
 
 #build_api_wrapper:
 #  stage: azure_setup
