--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -225,7 +225,7 @@ azure_notifications:
     - azure_deploy_webapp
   script:
     - echo "Setup notifications"
-    - az functionapp create --resource-group AzureFunctionsQuickstart-rg --consumption-plan-location westus --runtime dotnet-isolated --functions-version 4 --name HealthAndPrice --storage-account $STORAGE_ACCOUNT || exit 0
+    - az functionapp create --resource-group $RESOURCE_GROUP --consumption-plan-location westus --runtime python --runtime-version 3.10 --functions-version 4 --name HealthAndPrice --storage-account $STORAGE_ACCOUNT || exit 0
     
 
 #build_api_wrapper:
