Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -238,6 +238,7 @@ azure_functions:
     - azure_create_resource_group_datatable_appserviceplan_webapp
   script:
     - echo "Setup healthcheck function"
+    - npm install -g azure-functions-core-tools@4
     - az functionapp create --resource-group $RESOURCE_GROUP --consumption-plan-location $AZURE_LOCATION --runtime dotnet --functions-version 4 --name $AZURE_HEALTHCHECKFUNCTION_APP_NAME --storage-account $STORAGE_ACCOUNT || exit 0
     - az functionapp config appsettings set --name $AZURE_HEALTHCHECKFUNCTION_APP_NAME --resource-group $RESOURCE_GROUP --settings RESOURCE_ENDPOINTS="$WEBAPP_NAME.azurewebsites.net;$WRAPPER_CONTAINER_NAME.azurewebsites.net;$STORAGE_ACCOUNT.blob.core.windows.net"
     - cd code/HealthCheck/HealthCheckFunction/HealthCheckFunction/
